<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Rtx_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/Red_username"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="63dp"
        app:layout_constraintHorizontal_bias="0.52" />

    <EditText
        android:id="@+id/Red_username"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="55dp" />

    <TextView
        android:id="@+id/Rtx_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/Rtx_username"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/Rtx_username" />

    <EditText
        android:id="@+id/Red_pwd"
        android:inputType="textPassword"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:layout_marginLeft="-11dp"
        app:layout_constraintLeft_toLeftOf="@+id/Red_username"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/Red_username" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="20sp"
        android:layout_marginLeft="-17dp"
        app:layout_constraintLeft_toLeftOf="@+id/Rtx_pwd"
        android:id="@+id/textView4"
        android:layout_marginTop="38dp"
        app:layout_constraintTop_toBottomOf="@+id/Rtx_pwd" />

    <EditText
        android:id="@+id/Red_phone"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/Red_pwd"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/Red_pwd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/Red_email"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/Red_phone"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/Red_phone" />

    <Button
        android:id="@+id/Rbt_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sure"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@+id/Rbt_cancel"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="90dp" />

    <Button
        android:id="@+id/Rbt_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:layout_marginRight="69dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Rbt_sure"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Rbt_login"
        android:textSize="15sp"
        android:text="@string/for_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        app:layout_constraintHorizontal_bias="0.502" />


</android.support.constraint.ConstraintLayout>